# cmake_vcpkg_gtest_github_action_example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yaml
app/: CMakeLists.txt
app/include/: use_libs.hpp
app/src/: CMakeLists.txt  main.cpp  use_libs.cpp
message_lib/: CMakeLists.txt
message_lib/include/: message.hpp
message_lib/src/: CMakeLists.txt  message.cpp
message_lib/tests/: CMakeLists.txt  message_test.cpp
simple_lib/: CMakeLists.txt
simple_lib/include/: add.hpp
simple_lib/src/: CMakeLists.txt  add.cpp  simple_lib_usage.cpp
simple_lib/tests/: CMakeLists.txt  add_test.cpp
